[package]
name = "rocheck"
version = "0.1.1"
authors = ["Fireboltofdeath"]
edition = "2018"
description = "RoCheck implementation ported to Rust"
license = "MIT"

readme = "README.md"
repository = "https://github.com/Fireboltofdeath/RoCheck"
documentation = "https://docs.rs/rocheck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# t

[dependencies]
reqwest = { version = "0.10", features = ["json"] }

tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }